<resources>
    <string name="app_name">Travelers Guide</string>
    <string name="action_settings">Settings</string>
    <string name="region">Region</string>
    <string name="destination">Destination</string>
    <string name="search">Search</string>

    <string name="Welcome_Page_Btn">GET STARTED!</string>
    <string name="App_Name">Easy Travel</string>
    <string name="App_Name_1">TRAVEL EXPLORE</string>
    <string name="Mission">Discover  Experience  Share</string>
    <string name="Mission_1">Discover .  Experience .  Share</string>

    <string name="select">Please select preference</string>
    <string name="hotelsearch">Hotel</string>
    <string name="restaurantsearch">Restaurant</string>
    <string name="entertainmentsearch">Entertainment</string>
    <string name="returnlastpage">Return</string>
    <string name="Emergenceinfo">EmergencyInfo</string>
    <string name="selectActivity">SelectActivity</string>
    <string name="homeActivity">HomeActivity</string>
    <string name="emer_head">Emergeny Contact Information</string>
    <string name="emer_name">Contact Type</string>
    <string name="emer_addr">Address</string>
    <string name="emer_contact">Contact Information</string>
    <string name="emer_return">Return to Home Page</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_description">DescriptionActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="uni_name">Name</string>
    <string name="dest_text">Destination</string>
    <string name="cont_btn">Continue</string>
    <string name="rating">Rating</string>
    <string name="travel_info">Travel Info</string>
    <string name="title_activity_travel_info">travelInfoActivity</string>
    <string name="trans_type">Transport Type</string>
    <string name="start_point">Start Point</string>
    <string name="title_activity_demo">demoActivity</string>
    <string name="rating_btn">Ratings</string>
    <string name="title_activity_add_review">AddReviewActivity</string>
    <string name="post_review_button">Post Review</string>
    <string name="add_review_button">Add Review</string>
    <string name="RegionLink">Official Tourism site</string>
</resources>
