<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_weight="0.51">


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/emer_name"
            android:id="@+id/emer_name"
            android:textColor="#000000" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/emer_addr"
            android:id="@+id/emer_addr"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emer_contact"
            android:id="@+id/emer_contact"
            android:textColor="#000000" />

</LinearLayout>