<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".group6"
    android:background="@drawable/bluepink">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/hotelsearch"
            android:id="@+id/goHotel_btn"
            android:textSize="40dp"
            android:textStyle="bold"
            android:background="@drawable/pink"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="#000000" />

        <Button
            android:layout_width="577dp"
            android:layout_height="60dp"
            android:text="@string/restaurantsearch"
            android:id="@+id/goRestauant_btn"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="40dp"
            android:background="@drawable/yellow"
            android:layout_below="@+id/goEntertainment_btn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/entertainmentsearch"
            android:id="@+id/goEntertainment_btn"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:textStyle="bold"
            android:background="@drawable/green"
            android:layout_below="@+id/goHotel_btn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Emergenceinfo"
            android:id="@+id/goEmergency_btn"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:textStyle="bold"
            android:background="@drawable/blue"
            android:layout_below="@+id/goHotel_btn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/returnlastpage"
                android:id="@+id/goReturn_btn"
                android:layout_gravity="center_vertical"
                android:textSize="40dp"
                android:textStyle="bold"
                android:background="@drawable/purple"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
