<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@drawable/homepage1"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/App_Name_1"
            android:id="@+id/App_Name"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="40dp"
            android:textSize="35dp"
            android:textStyle="bold|italic"
            android:textColor="#f7ffeb"
            android:layout_alignParentTop="true"
            android:singleLine="false"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mission_1"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_marginTop="210dp"
            android:textSize="22dp"
            android:textColor="#020002"
            android:autoText="false"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_Page_Btn"
            android:id="@+id/Welcome_Page_Btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>
