<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:background="@drawable/hill">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:id="@+id/textView"
        android:layout_marginTop="158dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/region_editText"
        android:width="70dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/region_editText"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/dest_editText"
        android:layout_alignParentStart="true"
        android:width="70dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dest_editText"
        android:layout_below="@+id/region_editText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_alignStart="@+id/region_editText"
        android:editable="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/search"
        android:id="@+id/search_btn"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
