<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:orientation="vertical"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.db.travel.app.v1.HREresultActivity"
android:weightSum="1"
    android:background="@drawable/water">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uni_name"
            android:textSize="20dp"
            android:layout_weight=".7"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:id="@+id/textView8"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="0.15"
            android:textColor="#FFFFFF"
            android:layout_gravity="right" />
    </LinearLayout>

    <ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/result_listView"
        android:textAlignment="textStart" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/darkblue"
            android:text="@string/returnlastpage"
            android:id="@+id/returnFromResult"
            android:layout_gravity="center_horizontal"
            android:textColor="#070468"
            android:clickable="true" />
    </LinearLayout>


</LinearLayout>

