<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.db.app.travelersapp.DescriptionActivity"
    android:background="@drawable/walk">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_textview"
        android:text="Information:"
        android:textStyle="bold"
        android:textColor="#EE1289"
        android:textSize="23dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="351dp"
        android:layout_height="200dp"
        android:id="@+id/result_linearlayout"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/temp_textview">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/temptable">

        </TableLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reviews:"
        android:textSize="23dp"
        android:textStyle="bold"
        android:textColor="#EE1289"
        android:layout_below="@+id/result_linearlayout"
        android:layout_alignParentStart="true"
        android:id="@+id/textView13" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/textView13"
        android:fillViewport="false">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/desc_table">

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_info"
            android:id="@+id/travelinfo_button" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:id="@+id/blank1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_btn"
            android:id="@+id/rating_btn"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:id="@+id/blank2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnlastpage"
            android:id="@+id/returnFromDesc"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/descriptionImageView"
        android:layout_below="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout2" />

</RelativeLayout>
